# klangstrom-stm32-standalone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  post.cmake  pre.cmake  toolchain.cmake
src/: ApplicationStub.c  ApplicationStub.cpp  ApplicationStub.h  Arduino.h  KLST_PANDA-standalone.cpp  main.cpp
tools/: KLST_CATERPILLAR-update_variant.sh  KLST_PANDA-directories.txt  KLST_PANDA-update_library.sh  KLST_PANDA-update_variant.sh  KLST_PANDA_STM32_CubeMX-collect_files.sh  KLST_PANDA_STM32_CubeMX-compile_filelist.sh  README.md  SCRIPTS.md  append-board-variant-definition.sh  clang-format-folder.sh  collect_files.sh  klangstrom-stm32-format-generated.sh  klangstrom-update-libraries.sh  link_variant_files.sh  remove_linked_variant_files.sh  stm32duino.config
variants/KLST_CATERPILLAR/: KLST_CATERPILLAR-boards.txt
variants/KLST_CATERPILLAR/variant/: PeripheralPins_KLST_CATERPILLAR.c  variant_KLST_CATERPILLAR.cpp  variant_KLST_CATERPILLAR.h
variants/KLST_PANDA/: KLST_PANDA-boards.txt  KLST_PANDA-libraries.txt  KLST_PANDA-variant-files.txt
variants/KLST_PANDA/variant/: PeripheralPins_KLST_PANDA.c  variant_KLST_PANDA.cpp  variant_KLST_PANDA.h
